language/move-compiler/tests/move_check/translate/module_in_spec.move

module 0x01::M {
    spec module {
        module A{}
    }
}
